# bluez-rfcomm-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
bluetooth/: rfcomm_server.cpp  rfcomm_server.hpp
bluetooth/bluez/: adapter.cpp  adapter.hpp  connection_manager.cpp  connection_manager.hpp  device.cpp  device.hpp  reactor.cpp  reactor.hpp
